perf: reduce GC pressure on per-frame hot paths
- VnRenderer: reuse character entry and layered draw lists instead of
  allocating new ArrayLists every frame (fix half-finished //brb stub)
- TextParser.plainLength(): count characters by walking the matcher
  instead of allocating a full stripped string copy via stripTags()
- VnScene: cache resolved dialogue text per node index so the regex-
  heavy VnTextFormatter + Localization pipeline runs once, not 60x/sec
- Engine: swap-drain pattern for listener mutations avoids per-drain
  ArrayList copy allocation
- VnHistory: ArrayDeque for O(1) head removal instead of O(N) shift
- VnRollbackEntry: unmodifiable views in getters instead of defensive
  HashMap/HashSet/ArrayList copies on every access
- VnTextFormatter: StringBuilder over synchronized StringBuffer (no
  contention on the render thread)